fix layout bug in mid screen size

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,7 +3,7 @@
 
 .home_main {
   @include fl-col-ctr;
-  height: 80vh;
+  height: 100vh;
 
   .myPic {
     height: 30em;
